# aperion-pr

./: Cargo.toml  README.md
assets/intros/aperion/: README.txt
assets/intros/aperion/frames/: frame_00000002.qoi  frame_00000009.qoi  frame_00000010.qoi  frame_00000011.qoi  frame_00000012.qoi  frame_00000013.qoi  frame_00000014.qoi  frame_00000015.qoi  frame_00000016.qoi  frame_00000017.qoi  frame_00000018.qoi  frame_00000019.qoi  frame_00000020.qoi  frame_00000021.qoi  frame_00000022.qoi  frame_00000023.qoi  frame_00000024.qoi  frame_00000025.qoi  frame_00000026.qoi  frame_00000027.qoi  frame_00000028.qoi  frame_00000029.qoi  frame_00000030.qoi  frame_00000031.qoi  frame_00000032.qoi  frame_00000033.qoi  frame_00000034.qoi  frame_00000035.qoi  frame_00000036.qoi  frame_00000037.qoi  frame_00000038.qoi  frame_00000039.qoi  frame_00000040.qoi  frame_00000041.qoi  frame_00000042.qoi  frame_00000043.qoi  frame_00000044.qoi  frame_00000045.qoi  frame_00000046.qoi  frame_00000047.qoi  (+313 more)
crates/aperion/: Cargo.toml  build.rs
crates/aperion/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  intro.rs  lib.rs  renderer.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: info.rs
src/: adf.rs  app.rs  intro.rs  main.rs  renderer.rs  window.rs
